# tg

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: design.md  install-non-linux.md  plan.md  smoke.md
launchd/: com.devpermutations.tg.plist
src/: access.rs  api.rs  config.rs  init.rs  install.rs  listen.rs  main.rs  paths.rs  pending.rs  send.rs  tmux.rs  transcribe.rs
src/access/: allowlist.rs  mod.rs  pairing.rs
src/api/: client.rs  mod.rs  types.rs
systemd/: tg-listen.service
tests/: inbound.rs  outbound.rs  transcribe.rs
